Fix problem with toolbar getting cut off on small screens

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -521,7 +521,6 @@ ul.search-results {
     box-shadow: #e0e0e0 0 0 6px;
 
     display: flex;
-    justify-content: center;
 
     font-size: 0.8em;
 
